samples/_failures_safe/1761520045_1a4d42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_492e42a3.c: In function ‘matrix_mul’:
./samples/SAFE/__tmp_492e42a3.c:129:13: error: expected expression at end of input
  129 |             for (
      |             ^~~
./samples/SAFE/__tmp_492e42a3.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_492e42a3.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_492e42a3.c:129:13: error: expected declaration or statement at end of input
